# SPL211_Ass3_Client

./: .gitignore  CMakeLists.txt  README.md  makefile  makefile.IdoInWork.sav  makingfile.sh
include/: BGRegClient.h  Operation.cpp  Operation.h  OperationEncoderDecoder.h  Task.h  UserInputReader.h  connectionHandler.h
src/: BGRegClient.cpp  Operation.cpp  OperationEncoderDecoder.cpp  Task.cpp  UserInputReader.cpp  connectionHandler.cpp  main.cpp
